syntax = "proto3";
package ShareRing.shareledger.booking;

import "gogoproto/gogo.proto";
import "booking/tx.proto";
import "google/api/annotations.proto";
// import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/ShareRing/Shareledger/x/booking/types";

// Query defines the gRPC querier service.
service Query {
    rpc booking(QueryBookingRequest) returns (QueryBookingRequestResponse) {
        option (google.api.http).get = "/shareledger/booking/{bookID}";
    }
}

message QueryBookingRequest {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string bookID = 1;
}

message QueryBookingRequestResponse {
    Booking booking = 1;
}